hphp/hack/test/typecheck/expression_trees/interpolated_string.php.exp
ERROR: File "interpolated_string.php", line 10, characters 7-19:
Unsupported expression tree syntax. (Parsing[1002])
ERROR: File "interpolated_string.php", line 10, characters 8-9:
Variable `$x` is undefined, or not always defined. (Naming[2050])
